removed redundant code and added a section rule in the global css to solve overlapping issues with my secions

--- a/public/style.css
+++ b/public/style.css
@@ -10,8 +10,17 @@
 body {
     background: #F9F3E9;
     color: #2D4A5E;
+    overflow-x: hidden;
+}
+
+section {
+    min-height: 100vh;
+    width: 100vw;
+    max-width: 75rem;
+    margin: 0 auto;
+    padding: 5rem 2rem 2rem;
+    box-sizing: border-box;
     overflow: hidden;
-    overflow-y: scroll;
 }
 
 button {
