--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,20 +1,14 @@
 #about {
-    overflow: hidden;
-   width: 100vw;
-   /* height: 50vw; */
-   max-width: 65rem;
-   display: flex;
+    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
-   margin: 0 auto;
 }
 
 .aboutTitle {
     font-size: 3rem;
     font-weight: 600;
-    padding-top: 3rem;
     margin-bottom: 1.5rem;
 }
 
@@ -58,7 +52,6 @@
     padding: 0 2rem;
 }
 
-/* For smaller screens, stack the image and text vertically */
 @media (max-width: 600px) {
     .interestItem {
         flex-direction: column;
