--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,11 +1,6 @@
 #contactPage {
-    min-height: calc(100vh - 4rem);
-    width: 100vw;
-    height: 55vw;
-    max-width: 60rem;
-    margin: 0 auto;
-    text-align: center;
     display: flex;
+    text-align: center;
     flex-direction: column;
     align-items: center;
     justify-content: center;
