--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,10 +1,7 @@
 #intro {
-    height: calc(100vh - 4rem);
-    width: 100vw;
-    max-width: 75rem;
-    margin: 0 auto;
-    overflow: hidden;
     position: relative;
+    display: flex;
+    align-items: center;
 }
 
 .background {
@@ -17,9 +14,7 @@
 }
 
 .introContent {
-    height: 100vh;
-    width: 100vw;
-    padding: 2rem;
+    width: 100%;
     font-size: 3rem;
     font-weight: 700;
     display: flex;
