--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,9 +1,7 @@
 .NavBar {
     background-color: #F9F3E9;
-    /* border-bottom: 1px solid #D7C4A5; */
     height: 5rem;
     width: 100vw;
-    /* max-width: 100%; */
     margin: 0 auto;
     padding: 1rem 2rem;
     display: flex;
@@ -25,7 +23,6 @@
 button.desktopMenuBtn {
     font-family: inherit;
     font-size: 1rem;
-    /* padding: 0.5rem; */
     background-color: #B34235;
     color: #F9F3E9;
     width: 95px;
@@ -49,16 +46,9 @@ button.desktopMenuBtn {
 }
 
 .desktopMenuBtn {
-    /* background: #F9F3E9;
-    color: #2D4A5E; */
     border: none;
-    /* display: flex; */
     align-items: center;
     justify-content: center;
-    /* padding: 0 1rem; */
-    /* border-radius: 2rem; */
-    /* cursor: pointer; */
-    /* gap: 5px; */
 }
 
 .desktopMenuImg {
