--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,13 +1,8 @@
 #projects {
-    margin: 0 auto;
-    min-height: calc(100vh - 4rem);
-    width: 100vw;
-    max-width: 75rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    padding: 2rem;
+    justify-content: flex-start;
 }
 
 .projectsTitle {
