--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,20 +1,14 @@
 #skills {
-   overflow: hidden;
-   width: 100vw;
-   /* height: 50vw; */
-   max-width: 65rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
-   margin: 0 auto;
 }
 
 .skillsTitle {
     font-size: 3rem;
     font-weight: 600;
-    padding-top: 3rem;
     margin-bottom: 1.5rem;
 }
 
